--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,3 @@
-include "shared:shared-core", "shared:shared-hibernate", "shared:shared-oauth","shared:shared-spring-jdbc","shared:shared-test","shared:shared-web"
-include "apps:module"
+include "shared:shared-core"
 include "apps:webapp","apps:webapi"
 include "apps:app-gen"
