--- a/apps/webapi/build.gradle
+++ b/apps/webapi/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven'
 apply plugin: 'eclipse-wtp'
 
 group = 'org.octopus.dashboard'
-version = ''
+version = '1.0'
 
 description = """Management Dashboard :: WebService"""
 
@@ -18,11 +18,13 @@ repositories {
      maven { url "http://repo1.maven.apache.org/maven2" }
 }
 dependencies {
-	compile project(':apps:common-service')
-	compile project(':shared:shared-web')
-	
+	compile project(':shared:shared-core')
 	compile 'mysql:mysql-connector-java:5.1.9'
 	
+	// Spring - boot
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.3.5.RELEASE'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'1.3.5.RELEASE'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version:'1.3.5.RELEASE'
 	// Jpa + Hibernate
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version:'4.3.5.Final'
     compile group: 'org.hibernate', name: 'hibernate-validator', version:'5.0.3.Final'
@@ -35,18 +37,18 @@ dependencies {
     
 	compile group: 'org.springframework', name: 'spring-orm', version:'4.2.5.RELEASE'
     // Spring
-    compile group: 'org.springframework', name: 'spring-context-support', version:'4.2.5.RELEASE'
-    compile group: 'org.springframework', name: 'spring-core', version:'4.2.5.RELEASE'
-    compile group: 'org.springframework', name: 'spring-jdbc', version:'4.2.5.RELEASE'
-    compile group: 'org.springframework', name: 'spring-tx', version:'4.2.5.RELEASE'
+    //compile group: 'org.springframework', name: 'spring-context-support', version:'4.2.5.RELEASE'
+    //compile group: 'org.springframework', name: 'spring-core', version:'4.2.5.RELEASE'
+    //compile group: 'org.springframework', name: 'spring-jdbc', version:'4.2.5.RELEASE'
+    //compile group: 'org.springframework', name: 'spring-tx', version:'4.2.5.RELEASE'
     
-    compile (group: 'org.springframework.data', name: 'spring-data-jpa', version:'1.9.4.RELEASE'){
-    	exclude(module: 'org.springframework')
-    }
+    //compile (group: 'org.springframework.data', name: 'spring-data-jpa', version:'1.9.4.RELEASE'){
+    	//exclude(module: 'org.springframework')
+    //}
     
-    compile group: 'org.springframework', name: 'spring-web', version:'4.2.5.RELEASE'
-    compile group: 'org.springframework', name: 'spring-webmvc', version:'4.2.5.RELEASE'
-    testCompile group: 'org.springframework', name: 'spring-test', version:'4.2.5.RELEASE'
+    //compile group: 'org.springframework', name: 'spring-web', version:'4.2.5.RELEASE'
+    //compile group: 'org.springframework', name: 'spring-webmvc', version:'4.2.5.RELEASE'
+    //testCompile group: 'org.springframework', name: 'spring-test', version:'4.2.5.RELEASE'
     
     // Servlet
     compile group: 'javax.servlet', name: 'jstl', version:'1.2'
@@ -72,7 +74,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version:'2.4.0'
     
     runtime group: 'org.apache.tomcat', name: 'tomcat-jdbc', version:'7.0.53'
-    runtime group: 'com.h2database', name: 'h2', version:'1.3.176'
+    //runtime group: 'com.h2database', name: 'h2', version:'1.3.176'
     runtime group: 'opensymphony', name: 'sitemesh', version:'2.4.2'
     
     // logback
