--- a/apps/webapi/src/main/resources/application.properties
+++ b/apps/webapi/src/main/resources/application.properties
@@ -15,13 +15,53 @@
 #jdbc.password=recurit
 
 #mysql database setting
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/recruit?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=recruit
-jdbc.password=recruit
+spring.profiles.active=dev
+
+spring.jpa.database=mysql
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/recruit?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=recruit
+spring.datasource.password=recruit
+# db init settings
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.showSql=true
+spring.datasource.initialize=true
+spring.datasource.sqlScriptEncoding=UTF-8
+
+#disable automatic initialize for embedded H2
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialize=false
+flyway.enabled=true
 
 #connection pool settings
-jdbc.pool.maxIdle=10
-jdbc.pool.maxActive=50
+spring.datasource.initial-size=10
+spring.datasource.max-active=100
+spring.datasource.min-idle=8
+spring.datasource.max-idle=8
+#spring.datasource.max-wait=
+#spring.datasource.time-between-eviction-runs-millis=
+#spring.datasource.min-evictable-idle-time-millis=
 
-uploadPath=${user.home}/upload
+
+# logging settings
+logging.file=/var/log/springside/boot-api.log
+#logging.level.org.hibernate=WARN
+
+
+server.port=8080
+management.port=7002
+
+# application settings
+app.loginTimeoutSecs=600
+
+
+flyway.enabled=false
+
+# other settings
+spring.main.show-banner=false
+spring.jackson.serialization.INDENT_OUTPUT=true
+
+# /info endpoint
+info.app.name=Spring Boot WebService Example
+info.app.version=${project.version}
+
