--- a/apps/webapi/src/test/resources/application.functional.properties
+++ b/apps/webapi/src/test/resources/application.functional.properties
@@ -5,11 +5,10 @@ embeddedForLocal=true
 selenium.driver=firefox
 
 #(optional)override jdbc url for functional test
-db.type=h2
-jdbc.driver=org.h2.Driver
-jdbc.url=jdbc:h2:file:~/.h2/recurit-test;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-jdbc.username=sa
-jdbc.password=
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost/recruit?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=recruit
+jdbc.password=recruit
 
 #log4jdbc driver
 #jdbc.url=jdbc:log4jdbc:h2:file:~/.h2/recurit-test;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
