--- a/shared/shared-core/build.gradle
+++ b/shared/shared-core/build.gradle
@@ -1,7 +1,21 @@
 
 description = 'Octopus :: Core :: Core'
 dependencies {
+	compile group: 'org.hibernate', name: 'hibernate-entitymanager', version:'4.3.5.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version:'5.0.3.Final'
+    
+    compile (group: 'org.springframework.data', name: 'spring-data-jpa', version:'1.9.4.RELEASE'){
+    	exclude(module: 'org.springframework')
+    }
+	
+	compile group: 'org.eclipse.jetty', name: 'jetty-jsp', version:'7.6.15.v20140411'
+	compile group: 'javax.servlet', name: 'jstl', version:'1.2'
+	compile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.0.1'
+	compile group: 'org.springframework', name: 'spring-web', version:'4.2.5.RELEASE'
+	compile group: 'org.springframework', name: 'spring-webmvc', version:'4.2.5.RELEASE'
+	
 	compile group: 'org.springframework', name: 'spring-core', version:'4.2.5.RELEASE'
+	compile group: 'org.springframework', name: 'spring-test', version:'4.2.5.RELEASE'
 
 	compile group: 'org.apache.poi', name: 'poi', version:'3.9'
 	compile group: 'org.apache.poi', name: 'poi-ooxml', version:'3.9'
