enable rest file upload

--- a/apps/webapi/src/main/resources/application.properties
+++ b/apps/webapi/src/main/resources/application.properties
@@ -14,8 +14,18 @@
 #jdbc.username=recurit
 #jdbc.password=recurit
 
+uploadPath=${user.home}/upload/prod
+downloadPath=download
+
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost/recruit?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=recruit
+jdbc.password=recruit
+
+jdbc.pool.maxActive=100
+
 #mysql database setting
-spring.profiles.active=dev
+#spring.profiles.active=dev
 
 spring.jpa.database=mysql
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
