--- a/apps/webapi/src/main/webapp/WEB-INF/web.xml
+++ b/apps/webapi/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 	</context-param>
 	<context-param>
 		<param-name>spring.profiles.default</param-name>
-		<param-value>production</param-value>
+		<param-value>prod</param-value>
 	</context-param>
 	<!-- Define the basename for a resource bundle for I18N -->
 	<context-param>
