--- a/apps/webapi/src/main/webapp/WEB-INF/web.xml
+++ b/apps/webapi/src/main/webapp/WEB-INF/web.xml
@@ -59,6 +59,14 @@
 		<filter-name>sitemeshFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<filter>
+		<filter-name>CorsFilter</filter-name>
+		<filter-class>org.octopus.dashboard.web.filter.CORSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CorsFilter</filter-name>
+		<url-pattern>*</url-pattern>
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>springServlet</servlet-name>
