--- a/apps/webapi/build.gradle
+++ b/apps/webapi/build.gradle
@@ -20,7 +20,8 @@ repositories {
 dependencies {
 	compile project(':shared:shared-core')
 	compile 'mysql:mysql-connector-java:5.1.9'
-	
+	  
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.5.0'
 	// Spring - boot
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.3.5.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'1.3.5.RELEASE'
