--- a/apps/webapi/build.gradle
+++ b/apps/webapi/build.gradle
@@ -21,7 +21,11 @@ dependencies {
 	compile project(':shared:shared-core')
 	compile 'mysql:mysql-connector-java:5.1.9'
 	  
-	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.5.0'
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.3.0'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.3.0'
+	
+	compile group: 'org.freemarker', name: 'freemarker', version:'2.3.20'
+	compile group: 'javax.mail', name: 'mail', version:'1.4.7'	
 	// Spring - boot
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.3.5.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'1.3.5.RELEASE'
