--- a/shared/shared-core/build.gradle
+++ b/shared/shared-core/build.gradle
@@ -3,16 +3,17 @@ description = 'Octopus :: Core :: Core'
 dependencies {
 	compile group: 'org.hibernate', name: 'hibernate-entitymanager', version:'4.3.5.Final'
     compile group: 'org.hibernate', name: 'hibernate-validator', version:'5.0.3.Final'
-    
+    compile group: 'org.freemarker', name: 'freemarker', version:'2.3.20'
     compile (group: 'org.springframework.data', name: 'spring-data-jpa', version:'1.9.4.RELEASE'){
     	exclude(module: 'org.springframework')
     }
-	
+
 	compile group: 'org.eclipse.jetty', name: 'jetty-jsp', version:'7.6.15.v20140411'
 	compile group: 'javax.servlet', name: 'jstl', version:'1.2'
 	compile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.0.1'
 	compile group: 'org.springframework', name: 'spring-web', version:'4.2.5.RELEASE'
 	compile group: 'org.springframework', name: 'spring-webmvc', version:'4.2.5.RELEASE'
+	compile group: 'org.springframework', name: 'spring-context-support', version:'4.2.5.RELEASE'
 	
 	compile group: 'org.springframework', name: 'spring-core', version:'4.2.5.RELEASE'
 	compile group: 'org.springframework', name: 'spring-test', version:'4.2.5.RELEASE'
