--- a/apps/webapi/src/main/webapp/WEB-INF/web.xml
+++ b/apps/webapi/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath*:/applicationContext.xml
+			classpath*:/applicationContext.xml,
+			classpath*:/email/applicationContext.xml
 		</param-value>
 	</context-param>
 	<context-param>
